test/spectrum/examples/good/def_fn.clj
(ns spectrum.examples.good.def-fn)

(def foo (fn [x] (inc x)))
